@@ -1,16 +1,197 @@
-<h1>Editing Classe</h1>
+<!-- <h1>Editing Classe</h1>
 
-<%= error_messages_for :classe %>
+<%= error_messages_for :classe %> -->
+<% javascript 'dynamic_teachers' %>
+
+<% form_tag do %>
+    <table style="border: 1px solid #e9e9e9; width: 180px; border-collapse: colapse; float: right;">
+      <tr><th><%=_ 'Disciplines'%></th></tr>
+      <tr>
+        <td>
+        <%= select_tag :discipline_id, 
+         select_default +
+ options_from_collection_for_select(object.course.disciplines.find(:all), :id, :name), :class => "select" %>
+        </td>
+      </tr>
+      
+      <tr><th><%=_ 'Hour' %></th></tr>
+      <tr>
+        <td>
+          <label class="x-small"><%= text_field_tag_with_js_mask :start_time,'', :class => "mask_time textfield" %></label>
+          <label>..</label>
+          <label class="x-small"><%= text_field_tag_with_js_mask :end_time,'', :class => "mask_time textfield" %></label>
+        </td>
+      </tr>
+
+      <tr><th><%=_ 'Date' %></th></tr>
+      <tr>
+        <td>
+          <label class="small"><%= text_field_tag_with_js_mask :start_date,'', :class => "mask_date_br textfield" %></label>
+       
+        </td>
+      </tr>
+
+      <tr><th><%=_ 'Lessons' %></th></tr>
+      <tr>
+        <td>
+          <label class="x-small"><%= text_field_tag :lessons_number, '', :class => "textfield", :maxlength => "2" %></label>
+        </td>
+      </tr>
+
+      <tr><th><%=_ 'Classroom' %></th></tr>
+      <tr>
+        <td>
+        <%= select_tag :classroom_id, 
+          options_from_collection_for_select(Classroom.find(:all), :id, :name), :class => "select" %>
+        </td>
+      </tr>
+
+      <tr><th id="teacher_select_label"><%=_ 'Teacher' %></th></tr>
+      <tr>
+        <td>
+        <%= select_tag :teacher_id, select_default, :class => "select" %>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+        <label class="lblbutton" style="width: 95%;">
+        <%= button_to_function _('Add Lessons'), "add_lessons();", :class => 'button' %>
+        </label>
+        </td>
+      </tr>
+    </table>
+<% end %>
 
 <% form_for(:classe, :url => object_url, :html => { :method => :put }) do |f| %>
-  <%= render :partial => "form", :locals => { :f => f } %>
-  <p>
-    <%=submit_tag "Update"%>
-  </p>
+
+    <table style="border: 1px solid #e9e9e9; width: 70%; border-collapse: colapse;">
+      <thead>
+        <tr>
+          <th><%=_ 'Sun' %> <input type="checkbox" name="sunday" id="sunday" /></th>
+          <th><%=_ 'Mon' %> <input type="checkbox" name="monday" id="monday" /></th>
+          <th><%=_ 'Tue' %> <input type="checkbox" name="tuesday" id="tuesday" /></th>
+          <th><%=_ 'Wed' %> <input type="checkbox" name="wednesday" id="wednesday" /></th>
+          <th><%=_ 'Thu' %> <input type="checkbox" name="thursday" id="thursday" /></th>
+          <th><%=_ 'Fri' %> <input type="checkbox" name="friday" id="friday" /></th>
+          <th><%=_ 'Sat' %> <input type="checkbox" name="saturday" id="saturday" /></th>
+        </tr>
+      </thead>
+      
+      <tbody id="calendar">
+        <tr>
+          <td><%= hidden_field_tag 'lessons[]', '', :id => 'empty_lessons' %></td>
+        </tr>		
+      </tbody>
+    </table>
+
+  <br/>
+  <%#= render :partial => "form", :locals => { :f => f } %>
+<label class="lblbutton" style="width: 69.3%;">
+  <%= submit_tag _('Save'), :class => 'button' %>
+</label>
 <% end %>
+  
+<script type="text/javascript">
+  function add_lessons() {
+    var errors = new Array();
+
+    var errors_test = (["discipline_id", "start_time", "end_time", "start_date","lessons_number"].each(function(item){
+      if ($(item).getValue() == "" || $(item).getValue() == "select")
+      {
+         errors.push(item);
+      }
+    }));
+
+    var itens = (["sunday","monday","tuesday", "wednesday", "thursday", "friday", "saturday"].find(function(item){
+    return $(item).checked == true
+    }));
+    
+    if (!itens)
+    {
+      errors.push("Dia da semana");
+    }
+
+    if (errors.length > 0)
+    {
+      result = "<p>Erros de preenchimento nos determinados campos: </p>";
+      result += "<ul>";
+      errors.each(function(item){
+      result += "<li>" + item + "</li>";
+    });
+
+    result += "</ul>";
+
+    Modalbox.alert(result);
+    return;
+    }
+
+    lesson_date = Date.parse($('start_date').value);
+
+    total_lessons = $("lessons_number").value;
+    lessons_added = 0;
+    while (lessons_added < total_lessons) {
+      var tr = Builder.node('tr');
+
+      ['sunday', 'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday'].each(function(weekday){
+        discipline_id = $('discipline_id').getValue();
+        discipline = disciplines.get(discipline_id);
+
+        checkbox = $(weekday);
+        lesson_date = eval("lesson_date.next()." + weekday + "();");
+
+        if ((checkbox.checked === true) && (lessons_added < total_lessons)) {
+          lessons_added++;
+          
+          var elements = new Array();
+          elements.push(Builder.node('input', { type: 'hidden', name: create_name_for('discipline_id'), value: $("discipline_id").value }));
+          elements.push(Builder.node('input', { type: 'hidden', name: create_name_for('start_time'), value: $("start_time").value }));
+          elements.push(Builder.node('input', { type: 'hidden', name: create_name_for('end_time'), value: $("end_time").value }));
+          elements.push(Builder.node('input', { type: 'hidden', name: create_name_for('date'), value: lesson_date.toString("dd/MM/yyyy") }));
+          elements.push(Builder.node('input', { type: 'hidden', name: create_name_for('classroom_id'), value: $("classroom_id").value }));
+          elements.push(Builder.node('input', { type: 'hidden', name: create_name_for('teacher_id'), value: $("teacher_id").value }));
+          elements.push(Builder.node('div', {}, discipline.name));
+          elements.push(Builder.node('div', {}, lesson_date.toString("dd/MM/yyyy")));
+
+          var td = Builder.node('td', elements);
+          tr.appendChild(td);
+        } else {
+          var td = Builder.node('td', Builder.node('span'));
+          tr.appendChild(td);
+        }
+      });
+      $('calendar').appendChild(tr);
+    }
+  }
+
+  function create_name_for(element) {
+    result = 'classe[lessons][';
+
+    result += $("discipline_id").value + '-' + $("start_time").value + '-' + $("end_time").value + '-' + lesson_date.toString("dd/MM/yyyy") + '-' + $("classroom_id").value
+
+    result += '][';
+    result += element;
+    result += ']';
+    return result;
+  }
+</script>
+
+  
+  
+  
+  <!-- p>
+    <%=submit_tag "Update"%>
+  </p -->
+<% #end %>
+
+
+
+<!--
 
 <br/>
 
 <%= link_to 'Show', object_url %>
 |
 <%= link_to 'Back', collection_url %>
+
+-->
